--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaurav</title>
+
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <h1>Today I learened how to upload your code on github using terminal in VS Code.</h1>
