--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaurav</title>
 
-    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <h1>Today I learened how to upload your code on github using terminal in VS Code.</h1>
     <img src="./gaurav.jpg" width="250px">
     <h2>Gaurav</h2>
     <h4>Web Designer and Developer</h4>
+
+    <style>
+        body{
+            background-color: black;
+            color: white;
+            display: grid;
+            place-items: center;
+        }
+    </style>
 </body>
 </html>
